chore: add color to overview cards

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -15,7 +15,7 @@
         "past-events": "vergangene Veranstaltungen",
         "within-7-days": "innerhalb der nächsten 7 Tage",
         "within-30-days": "innerhalb der nächsten 30 Tage",
-        "reset-time-period": "innerhalb der nächsten 30 Tage"
+        "reset-time-period": "Zeitraum zurücksetzen"
       },
       "terms": {
         "events": "{count, plural, =0 {keine Veranstaltungen} one {1 Veranstaltung} other {# Veranstaltungen}}",
